--- a/_posts/2020-04-23-汇编语言的笔记.md
+++ b/_posts/2020-04-23-汇编语言的笔记.md
@@ -4,11 +4,13 @@ title: 汇编笔记
 date: 2020-04-28
 categories:  Documentation
 tags:
-- 汇编
----###汇编王爽
+-汇编
+---
+
+<!-- more -->
 学习汇编语言，首先必须了解两个知识点：寄存器和内存模型。
 
--先来看寄存器。CPU 本身只负责运算，不负责储存数据。数据一般都储存在内存之中，CPU 要用的时候就去内存读写数据。但是，CPU 的运算速度远高于内存的读写速度，为了避免被拖慢，CPU 都自带一级缓存和二级缓存。基本上，CPU 缓存可以看作是读写速度较快的内存。
+先来看寄存器。CPU 本身只负责运算，不负责储存数据。数据一般都储存在内存之中，CPU 要用的时候就去内存读写数据。但是，CPU 的运算速度远高于内存的读写速度，为了避免被拖慢，CPU 都自带一级缓存和二级缓存。基本上，CPU 缓存可以看作是读写速度较快的内存。
 
 但是，CPU 缓存还是不够快，另外数据在缓存里面的地址是不固定的，CPU 每次读写都要寻址也会拖慢速度。因此，除了缓存之外，CPU 还自带了寄存器（register），用来储存最常用的数据。也就是说，那些最频繁读写的数据（比如循环变量），都会放在寄存器里面，CPU 优先读写寄存器，再由寄存器跟内存交换数据。
 
@@ -18,7 +20,7 @@ tags:
 
 
 
-
+###指令
 
 
 -伪指令：没有对应的机器码，由编译器执行，计算机并不执行。
