--- a/_posts/2020-04-28-汇编语言的笔记.md
+++ b/_posts/2020-04-28-汇编语言的笔记.md
@@ -5,7 +5,7 @@ date: 2020-04-28
 categories:  Documentation
 tags:
 -汇编
----
+ ---
 
 <!-- more -->
 ###两个重要的知识点
@@ -25,8 +25,44 @@ tags:
 ###指令
 
 
--伪指令：没有对应的机器码，由编译器执行，计算机并不执行。
+- 伪指令：没有对应的机器码，由编译器执行，计算机并不执行。
 
--汇编指令：机器码的记助符，有对应的机器码。
+- 汇编指令：机器码的记助符，有对应的机器码。
 
 CPU要工作必须向它提供指令和数据，指令和数据在存储器中存放，也就是我们平时说的内存，CPU不能使用磁盘上的数据。
+
+
+####CPU要从内存中读数据，首先要指定存储单元的地址。
+
+存储器被划分为若干个存储单元从0开始顺序编码，例如一个存储器有128个存储单元，它可以存储128个Byte，编码从0~127。
+
+最小信息单位bit（比特），也就是一个二进制位。一个存储单元可以存储8个bit，即8位二进制数。8个bit组成一个Byte，也就是一个字节。微型机存储器的存储单元可以存储一个Byte，即8个二进制位。
+
+- 1KB=1024B
+- 1MB=1024KB 
+- 1GB=1024MB 
+- 1TB=1024GB
+
+
+
+
+地址总线上能传送多少个不同的信息，CPU就可以对多少个存储单元进行寻址。一根导线可以传送的稳定状态只有1高电平和0低电平两种，10根导线可以传送10位二进制数据，而10位二进制数可以表示2的10次方个不同的数据。一个CPU有N根地址线，则可以说这个CPU的地址总线的宽度为N，这样的CPU最多可以寻找2的N次方个存储单元。
+ ###测验题
+
+> 例，1个CPU的寻址能力为8KB，那么它的地址总线的宽度为13。
+>     解析：1KB=1024B，8KB=1024B*8=2^N, N=13
+
+> 例题，8080、8088、80286、80386的地址总线宽度分别位16根、20根、24根、32根，则他们的寻址能力分别为：64(KB)、1(MB)、4(MB)、4（GB)。
+>     解析：一个内存单 元=1Byte
+
+> 8根数据总线一次可以传送8位二进制数据(即一个字节)。例，8080、8088、8086、80286、80386的数据总线宽度分别为8根、8根、16根、16根、32根，则他们一次可以传送的数据为:1B、1B、2B、2B、4B.
+
+> 例，从内存中读取1024字节的数据，8086至少读512次，80386至少读256次。
+
+>     解析：8086的数据总线宽度为16根(即一次传送的数据为2B) 1024B/2B=512,同理1024B/4B=256。
+
+在存储器中，数据和程序以二进制形式存放。
+
+''' 在存储器中指令和数据没有任何区别，都是二进制信息。
+''' 
+就像棋盒中的黑白棋子,只有在棋盘中展开对弈时才有意义,在棋盒中是没有实际意义的
